# poc-cpp

./: .clang-format  .makim.yaml  CMakeLists.txt  Makefile  README.md  environment.yml  meson.build
.github/: FUNDING.yml
conda/: dev.yaml
src/: expr-visitor.cpp  expr-visitor.h  expr.cpp  expr.h  main.cpp  result.h  test_casting.cpp  test_macros.cpp  test_memory_leak.cpp  test_template.cpp  test_types.cpp  test_unique_ptr.cpp  test_visitor.cpp  utils.cpp  utils.h
